Wrote some conclusions

--- a/Disaster_Tweets_Notebook.ipynb
+++ b/Disaster_Tweets_Notebook.ipynb
@@ -2550,9 +2550,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 161,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Multinomial Naive Bayes\n",
+      "Training Accuracy: 0.9073 \t\t Testing Accuracy: 0.8051\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "\n",
+      "Random Forest\n",
+      "Training Accuracy: 0.9876 \t\t Testing Accuracy: 0.7883\n"
+     ]
+    }
+   ],
    "source": [
     "nb_train_score3 = accuracy_score(y_train, nb_train_preds3)\n",
     "nb_test_score3 = accuracy_score(y_test, nb_test_preds3)\n",
@@ -2598,11 +2612,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "I first tried to separate all the words in the text file, then get rid of numbers and symbols. Then I spent some time trying to get rid of the https links and all of the webpages. Finally I made all the words lowercase. I tried two different Tweet processing methods but neither of them worked - perhaps because the string of text had been changed to a list.\n",
+    "\n",
+    "Using the TfidfVectorizer along with my nltk cleaning that was somehow joined again to a string I was able to improve my testing accuracy for the Naive Bayes which went from 79.94% to 80.51%. The Random Forest testing accuracy also went up from 77.73% to 78.83%. Neither are great and both are only slight improvements, but nevertheless heading in the right direction. I still have some more cleaning issues to deal with - since a bunch of the word vectors seemed to be just letters."
+   ]
   },
   {
    "cell_type": "code",
